# terraform-practice

./: .gitignore  README.md  pyproject.toml
project/: bundle_variable.tf  main.tf  variable.tf
project/modules/computing/ec2/: _variable.tf
project/modules/computing/ec2_sg/: _output.tf  _variable.tf  resource.tf
project/modules/computing/ec2_sg_rule/: _variable.tf  resource.tf
project/modules/network/subnet/: _output.tf  _variable.tf  resource.tf
project/modules/network/vpc/: 00_subnet.tf  00_vpc.tf  99_variable.tf  _output.tf  _variable.tf  resource.tf  vpc.tf
project/shells/: modules-pass.txt  variable-bundle-v2.1.py  variable-bundle-v2.py  variable-bundle.py
project/shells/bk/: variable-bundle-v0.1.py  variable-bundle-v0.py
