[tool.poetry]
name = "terraform-practice"
version = "0.1.0"
description = ""
authors = ["t_inoue <t.artwork.ceramica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-hcl2 = "^4.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
